--- a/track.html
+++ b/track.html
@@ -14,6 +14,7 @@
     }
     h1 {
       text-align: center;
+      margin-bottom: 15px;
     }
     form {
       background: rgba(255, 255, 255, 0.1);
@@ -21,6 +22,7 @@
       border-radius: 10px;
       max-width: 500px;
       margin: auto;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.2);
     }
     input, select {
       width: 100%;
@@ -28,6 +30,7 @@
       margin: 8px 0;
       border-radius: 6px;
       border: none;
+      font-size: 16px;
     }
     button {
       background: #28a745;
@@ -38,6 +41,7 @@
       border-radius: 8px;
       font-size: 16px;
       cursor: pointer;
+      transition: background 0.3s ease;
     }
     button:hover {
       background: #218838;
@@ -46,6 +50,7 @@
       margin-top: 20px;
       text-align: center;
       font-weight: bold;
+      font-size: 18px;
     }
   </style>
 </head>
@@ -68,7 +73,7 @@
   <div id="result"></div>
 
   <script>
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzIojxeknU2gc0JZgXEwX-DZSpzL3q3PFUHkF26LppHiBDHkKlfejO0leQu0dTYkwY/exec";
+    const WEB_APP_URL = "ضع_رابط_Web_App_هنا"; // رابط Google Apps Script
 
     document.getElementById("orderForm").addEventListener("submit", async function(e) {
       e.preventDefault();
@@ -106,7 +111,7 @@
           const json = await res.json();
           if (json.success) {
             document.getElementById("result").innerHTML =
-              `✅ تم تسجيل طلبك! كود التتبع: <strong>${json.trackingCode}</strong>`;
+              `✅ تم تسجيل طلبك!<br>📦 كود التتبع: <strong>${json.trackingCode}</strong>`;
           } else {
             document.getElementById("result").innerHTML =
               `❌ حصل خطأ: ${json.error}`;
