--- a/track.html
+++ b/track.html
@@ -73,7 +73,7 @@
   <div id="result"></div>
 
   <script>
-    const WEB_APP_URL = "ضع_رابط_Web_App_هنا"; // رابط Google Apps Script
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzIojxeknU2gc0JZgXEwX-DZSpzL3q3PFUHkF26LppHiBDHkKlfejO0leQu0dTYkwY/exec"; // رابط Google Apps Script
 
     document.getElementById("orderForm").addEventListener("submit", async function(e) {
       e.preventDefault();
